Gtk-4.0: Fix extra gap in search bars

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4159,8 +4159,7 @@ switch {
 /************
  * Toolbars *
  ************/
-toolbar, .inline-toolbar, searchbar,
-.location-bar {
+toolbar, .inline-toolbar, searchbar > revealer > box {
   padding: 4px;
   background-color: #161925; }
 
@@ -4192,18 +4191,15 @@ toolbar {
   border-width: 0 1px 1px;
   border-radius: 0  0 5px 5px; }
 
-searchbar,
-.location-bar {
+searchbar > revealer > box {
   border-width: 0 0 1px;
-  padding: 3px; }
+  padding: 5px; }
 
-.inline-toolbar, searchbar,
-.location-bar {
+.inline-toolbar, searchbar > revealer > box {
   border-style: solid;
   border-color: rgba(12, 14, 21, 0.8);
   background-color: rgba(20, 23, 33, 0.94); }
-  .inline-toolbar:backdrop, searchbar:backdrop,
-  .location-bar:backdrop {
+  .inline-toolbar:backdrop, searchbar > revealer > box:backdrop {
     border-color: rgba(13, 16, 23, 0.82);
     background-color: rgba(20, 23, 33, 0.937);
     box-shadow: none;
